--- a/src/main/resources/image/browser/javafx/bundle/base_pl.properties
+++ b/src/main/resources/image/browser/javafx/bundle/base_pl.properties
@@ -1,19 +1,7 @@
-label.firstTab=Wyszukaj ksi\u0105\u017Ck\u0119
-label.secondTab=Dodaj now\u0105 ksi\u0105\u017Ck\u0119
-label.title=Tytu\u0142:
-label.author=Autor:
-label.state=Status:
+# Default bundle, used when no bundle is found for specific language
 
-button.loadFolder=Wybierz folder
-button.add=Dodaj
-button.delete=Usu\u0144
-
-state.ANY=
-state.FREE=dost\u0119pny
-state.LOAN=wypo\u017Cyczony
-
-table.emptyText=Brak wyników
-column.id=Id
-column.title=Tytu\u0142
-column.author=Autor
-column.state=Status
+button.loadFolder=Wczytaj folder
+button.previous=Poprzedni
+button.next=Nast\u0119pny
+button.play=Odtwarzaj
+button.pause=Zatrzymaj
